force-app/main/default/objects/Procurement_Cat_Code__c/Procurement_Cat_Code__c.object-meta.xml
<CustomObject>
    <label>Level 4 Categorisation Code</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Level 4 Categorisation Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Level 4 Categorisation Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>