force-app/main/default/objects/Procurement_Cat_Code__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <inlineHelpText>Provides the level 4 categorisation code. N.B The magnifier can be used to search for the relevant code using a keyword i.e Hardware</inlineHelpText>
    <label>Code</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Category__c.CategoryType__c</field>
            <operation>equals</operation>
            <value>Code</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Category__c</referenceTo>
    <relationshipLabel>Level 4 Categorisation Codes</relationshipLabel>
    <relationshipName>Procurement_Cat_Codes</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>