force-app/main/default/objects/Procurement_Cat_Code__c/fields/Procurement__c.field-meta.xml
<CustomField>
    <fullName>Procurement__c</fullName>
    <inlineHelpText>Defaults with the case number and should not be amended</inlineHelpText>
    <label>Procurement</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Level 4 Categorisation Codes</relationshipLabel>
    <relationshipName>Procurement_Cat_Codes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>