force-app/main/default/objects/Procurement_Cat_Code__c/fields/Procurement_Cat_Code_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Cat_Code_External_Id__c</fullName>
    <description>External Id (not generated by Salesforce) to use as a reference for upserts during data migration.</description>
    <externalId>true</externalId>
    <label>Procurement Cat Code External Id</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>